# 63184_fachpraktikum_team_1

./: .gitignore  Dockerfile  DockerfileApi  DockerfileApp  DockerfileFrontend  DockerfileWorker  LICENSE  Makefile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  test_dataset.csv
.github/workflows/: docker-images.yml  docker-publish-app.yml  docker-publish-worker.yml  docker-publish.yml  pytest.yml
db/: init_db.py
docs/: Fachpraktikum MLCore.pptx  folien.md  structure.puml  structure_preview  structure_release
docs/paper/: .gitignore  LTJournalArticle.cls  main.tex  mlcore.bib  zotero.bib
docs/paper/figures/: docker-compose.yml
docs/paper/sections/: 00_abstrakt.tex  01_uebersicht.tex  02_struktur.tex  02b_db.tex  03_mlcore.tex  04_ux.tex  05_perspektive.tex  06_fazit.tex
frontend/: TODO.md  index.html  package-lock.json  package.json  vite-env.d.ts
frontend/src/: index.css  main.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: index.tsx
src/api/: events.py  main.py  test_main.py
src/app/: main.py  test_main.py
src/celery_handler/: __init__.py  handler.py
src/db/: README.md  __init__.py  db.py  init_db.py  init_test_db.py  schema_mysql.sql  seed.sql  test_db.py  test_db.txt  test_init_db.py  test_smoke.py
src/mlcore/: TODO.md
src/mlcore/explain/: explanator.py  get_feature_names.py  summary_calculator.py
src/mlcore/io/: README.md  data_reader.py  metadata_loader.py  metadata_saver.py  model_loader.py  model_saver.py  preset_loader.py  (+2 more)
src/worker/: tasks.py  test_tasks.py
testdata/: dataset_versions.json  ml_problems.json  test_predict.csv  test_predict_gender.csv  test_predict_income.csv  test_train.csv
(+163 files in other folders)
