[project]
name = "fachpraktikum"
requires-python = "~=3.13"
dynamic = ["version"]
authors = [
  { name = "Joshua Allius", email = "joshua.allius@studium.fernuni-hagen.de" },
  { name = "Hamza Gueni" },
  { name = "Nikolaos Psycharis" },
]
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
  # fastapi dependencies:
  "fastapi[standard]==0.120.4",
  "pydantic==2.12.3",
  # mlcore dependencies:
  "pandas==2.2.3",
  "numpy==2.1.2",
  "scikit-learn==1.5.2",
  "plotly==5.24.1",
  "matplotlib==3.9.2",
  "shap==0.49.1",
  "lime==0.2.0.1",
  "joblib==1.4.2",
]

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["httpx", "pytest"]
